net: skb_is_gso_v6() requires skb_is_gso() (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17047,6 +17047,7 @@
 	patches.drivers/bnx2x-0143-bnx2x-Don-t-disable-enable-SR-IOV-when-loading.patch
 	patches.drivers/bnx2x-0144-bnx2x-Change-function-prototype.patch
 	patches.drivers/bnx2x-0145-bnx2x-Add-support-for-EXTPHY2-LED-mode.patch
+	patches.drivers/bnx2x-0146-net-skb_is_gso_v6-requires-skb_is_gso.patch
 
 	########################################################
 	# Wireless Networking
