bnx2x: fix compilation without CONFIG_BNX2X_SRIOV (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16961,6 +16961,7 @@
 	patches.drivers/bnx2x-0057-bnx2x-Fix-VF-outer-vlan-removal.patch
 	patches.drivers/bnx2x-0058-bnx2x-Prevent-VF-race.patch
 	patches.drivers/bnx2x-0059-bnx2x-Cosmetic-changes.patch
+	patches.drivers/bnx2x-0060-bnx2x-fix-compilation-without-CONFIG_BNX2X_SRIOV.patch
 
 	########################################################
 	# Wireless Networking
