bnx2x: Allow recovery from second slot reset (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16974,6 +16974,7 @@
 	patches.drivers/bnx2x-0070-bnx2x-Allow-RX-TX-pause-control-in-autoneg.patch
 	patches.drivers/bnx2x-0071-bnx2x-Enhance-MAC-configuration-for-VFs.patch
 	patches.drivers/bnx2x-0072-bnx2x-Fix-memory-leak.patch
+	patches.drivers/bnx2x-0073-bnx2x-Allow-recovery-from-second-slot-reset.patch
 
 	########################################################
 	# Wireless Networking
