bnx2x: Wait for MCP validity during AER (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16981,6 +16981,7 @@
 	patches.drivers/bnx2x-0077-bnx2x-Prevent-memory-leak-when-cnic-is-absent.patch
 	patches.drivers/bnx2x-0078-net-bnx2x-dont-reload-on-GRO-change.patch
 	patches.drivers/bnx2x-0079-bnx2x-Link-flap-avoidance-in-switch-dependent-mode.patch
+	patches.drivers/bnx2x-0080-bnx2x-Wait-for-MCP-validity-during-AER.patch
 
 	########################################################
 	# Wireless Networking
