bnx2x: Fix VF outer vlan removal (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16958,6 +16958,7 @@
 	patches.drivers/bnx2x-0054-bnx2x-Fix-AER-semaphore-release.patch
 	patches.drivers/bnx2x-0055-bnx2x-missing-ARI-should-not-be-lethal.patch
 	patches.drivers/bnx2x-0056-bnx2x-Fix-VF-statistics.patch
+	patches.drivers/bnx2x-0057-bnx2x-Fix-VF-outer-vlan-removal.patch
 
 	########################################################
 	# Wireless Networking
