--- a/series.conf
+++ b/series.conf
@@ -17092,6 +17092,7 @@
 	patches.drivers/bnx2x-0188-bnx2x-Don-t-release-PCI-bars-on-shutdown.patch
 	patches.drivers/bnx2x-0189-bnx2x-Fix-VF-flr-flow.patch
 	patches.drivers/bnx2x-0190-bnx2x-More-Shutdown-revisions.patch
+	patches.drivers/bnx2x-0191-bnx2x-Fix-generic-option-settings.patch
 
 	########################################################
 	# Wireless Networking
