bnx2x: Set ethtool ops for vfs (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16946,6 +16946,7 @@
 	patches.drivers/bnx2x-0042-bnx2x-fix-UDP-checksum-for-57710-57711.patch
 	patches.drivers/bnx2x-0043-bnx2x-use-the-default-NAPI-weight.patch
 	patches.drivers/bnx2x-0044-bnx2x-Fix-SFP-misconfiguration-in-iSCSI-boot-scenari.patch
+	patches.drivers/bnx2x-0045-bnx2x-Set-ethtool-ops-for-vfs.patch
 
 	########################################################
 	# Wireless Networking
