bnx2x: Remove sparse and coccinelle warnings (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17001,6 +17001,7 @@
 	patches.drivers/bnx2x-0097-bnx2x-improve-VF-timings.patch
 	patches.drivers/bnx2x-0098-bnx2x-Fix-20G-KR2-support-claims.patch
 	patches.drivers/bnx2x-0099-bnx2x-Fix-compilation-with-no-IOV-support.patch
+	patches.drivers/bnx2x-0100-bnx2x-Remove-sparse-and-coccinelle-warnings.patch
 
 	########################################################
 	# Wireless Networking
