--- a/series.conf
+++ b/series.conf
@@ -16977,6 +16977,7 @@
 	patches.drivers/bnx2x-0073-bnx2x-Allow-recovery-from-second-slot-reset.patch
 	patches.drivers/bnx2x-0074-bnx2x-Prevent-NULL-pointer-dereference-in-kdump.patch
 	patches.drivers/bnx2x-0075-Revert-bnx2x-allow-nvram-test-to-run-when-device-is-.patch
+	patches.drivers/bnx2x-0076-bnx2x-correct-reading-of-speed-capabilities.patch
 
 	########################################################
 	# Wireless Networking
