--- a/series.conf
+++ b/series.conf
@@ -17018,6 +17018,7 @@
 	patches.drivers/bnx2x-0114-bnx2x-Protect-against-VFs-ndos-when-SR-IOV-is-disabl.patch
 	patches.drivers/bnx2x-0115-bnx2x-set-VF-DMAE-when-first-function-has-0-supporte.patch
 	patches.drivers/bnx2x-0116-bnx2x-vf-mark-stats-started.patch
+	patches.drivers/bnx2x-0117-bnx2x-Fix-move-FP-memory-deallocations.patch
 
 	########################################################
 	# Wireless Networking
