bnx2x: no error when RSS configuration fails (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17070,6 +17070,7 @@
 	patches.drivers/bnx2x-0166-bnx2x-downgrade-valid-ME-register-value-message-leve.patch
 	patches.drivers/bnx2x-0167-bnx2x-Add-AER-support-missing-bits.patch
 	patches.drivers/bnx2x-0168-bnx2x-add-Big-Endian-ethtool-comment.patch
+	patches.drivers/bnx2x-0169-bnx2x-no-error-when-RSS-configuration-fails.patch
 
 	########################################################
 	# Wireless Networking
