--- a/series.conf
+++ b/series.conf
@@ -16940,6 +16940,7 @@
 	patches.drivers/bnx2x-0036-bnx2x-Remove-many-sparse-warnings.patch
 	patches.drivers/bnx2x-0037-bnx2x-correct-memory-release-scheme.patch
 	patches.drivers/bnx2x-0038-bnx2x-Fix-compilation-with-stop-on-error.patch
+	patches.drivers/bnx2x-0039-bnx2x-SR-IOV-version-compatibility-bugfix.patch
 
 	########################################################
 	# Wireless Networking
