--- a/series.conf
+++ b/series.conf
@@ -17105,6 +17105,7 @@
 	patches.drivers/bnx2x-0201-bnx2x-Fix-bnx2x_panic_dump-for-VFs.patch
 	patches.drivers/bnx2x-0202-bnx2x-semantic-revise-scheduling-of-sp_rtnl.patch
 	patches.drivers/bnx2x-0203-bnx2x-utilize-FW-7.8.19.patch
+	patches.drivers/bnx2x-0204-bnx2x-Use-pci_enable_msix_range-instead-of-pci_enabl.patch
 
 	########################################################
 	# Wireless Networking
