--- a/series.conf
+++ b/series.conf
@@ -17041,6 +17041,7 @@
 	patches.drivers/bnx2x-0137-bnx2x-add-missing-VF-resource-allocation-during-init.patch
 	patches.drivers/bnx2x-0138-bnx2x-prevent-masking-error-from-cnic.patch
 	patches.drivers/bnx2x-0139-bnx2x-prevent-masked-MCP-parities-from-appearing.patch
+	patches.drivers/bnx2x-0140-bnx2x-handle-known-but-unsupported-VF-messages.patch
 
 	########################################################
 	# Wireless Networking
