--- a/series.conf
+++ b/series.conf
@@ -16947,6 +16947,7 @@
 	patches.drivers/bnx2x-0043-bnx2x-use-the-default-NAPI-weight.patch
 	patches.drivers/bnx2x-0044-bnx2x-Fix-SFP-misconfiguration-in-iSCSI-boot-scenari.patch
 	patches.drivers/bnx2x-0045-bnx2x-Set-ethtool-ops-for-vfs.patch
+	patches.drivers/bnx2x-0046-bnx2x-Add-iproute2-support-for-vfs.patch
 
 	########################################################
 	# Wireless Networking
