bnx2x: reorganization and beautification (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16933,6 +16933,7 @@
 	patches.drivers/bnx2x-0029-bnx2x-improve-stop-on-error.patch
 	patches.drivers/bnx2x-0030-bnx2x-Introduce-2013-and-advance-version-to-1.78.02.patch
 	patches.drivers/bnx2x-0031-bnx2x-Semantic-renovation.patch
+	patches.drivers/bnx2x-0032-bnx2x-reorganization-and-beautification.patch
 
 	########################################################
 	# Wireless Networking
