bnx2x: missing ARI should not be lethal (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16956,6 +16956,7 @@
 	patches.drivers/bnx2x-0052-bnx2x-AER-revised.patch
 	patches.drivers/bnx2x-0053-bnx2x-fix-assignment-of-signed-expression-to-unsigne.patch
 	patches.drivers/bnx2x-0054-bnx2x-Fix-AER-semaphore-release.patch
+	patches.drivers/bnx2x-0055-bnx2x-missing-ARI-should-not-be-lethal.patch
 
 	########################################################
 	# Wireless Networking
