--- a/series.conf
+++ b/series.conf
@@ -13659,6 +13659,7 @@
 	patches.drivers/mlx4-0287-net-mlx4_en-Fix-bridged-vSwitch-configuration-for-no.patch
 	patches.drivers/mlx4-0288-net-mlx4_core-Set-number-of-msix-vectors-under-SRIOV.patch
 	patches.drivers/mlx4-0289-mlx4_core-Fix-advertisement-of-wrong-PF-context-beha.patch
+	patches.fixes/genirq-export-handle_edge_irq-and-irq_to_desc.patch
 
 	patches.drivers/0001-IB-iser-Fix-wrong-mask-when-sizeof-dma_addr_t-sizeof.patch
 	patches.drivers/0002-IB-iser-Support-iSCSI-PDU-padding.patch
