fork: report pid reservation failure properly (bnc#909684).

--- a/series.conf
+++ b/series.conf
@@ -444,6 +444,7 @@
 	# bnc#904671
 	patches.fixes/0001-coredump-ensure-the-fpu-state-is-flushed-for-proper-.patch
 	patches.fixes/0002-x86-xsave-remove-thread_has_fpu-bug-check-in-__sanit.patch
+	patches.fixes/fork-report-pid-reservation-failure-properly.patch
 
 	########################################################
 	# futex
