direct-io: don't read inode->i_blkbits multiple times (bnc#919357).

--- a/series.conf
+++ b/series.conf
@@ -1556,6 +1556,7 @@
 	patches.fixes/mm-thp-reduce-khugepaged-freezing-latency.patch
 
 	patches.fixes/fs-buffer.c-make-block-size-be-per-page-and-protecte.patch
+	patches.fixes/direct-io-don-t-read-inode-i_blkbits-multiple-times.patch
 	patches.fixes/blkdev_max_block-make-private-to-fs-buffer.c.patch
 	patches.fixes/vfs-avoid-attempt-to-access-beyond-end-of-device-war.patch
 	patches.fixes/vfs-fix-O_DIRECT-read-past-end-of-block-device.patch
