--- a/series.conf
+++ b/series.conf
@@ -1555,6 +1555,7 @@
 	# Do not allow khugepaged to delay suspend-to-ram (bnc#825291)
 	patches.fixes/mm-thp-reduce-khugepaged-freezing-latency.patch
 
+	patches.fixes/fs-buffer.c-make-block-size-be-per-page-and-protecte.patch
 	patches.fixes/blkdev_max_block-make-private-to-fs-buffer.c.patch
 	patches.fixes/vfs-avoid-attempt-to-access-beyond-end-of-device-war.patch
 	patches.fixes/vfs-fix-O_DIRECT-read-past-end-of-block-device.patch
