hpsa: do not use function pointers in fast path command submission (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6608,6 +6608,7 @@
 	patches.drivers/hpsa-return-failed-from-device-reset-abort-handlers.patch
 	patches.drivers/hpsa-do-not-use-a-void-pointer-for-scsi_cmd-field-of.patch
 	patches.drivers/hpsa-print-CDBs-instead-of-kernel-virtual-addresses-.patch
+	patches.drivers/hpsa-do-not-use-function-pointers-in-fast-path-comma.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
