hpsa: return failed from device reset/abort handlers (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6605,6 +6605,7 @@
 	patches.drivers/hpsa-do-not-ack-controller-events-on-controllers-tha.patch
 	patches.drivers/hpsa-guard-against-overflowing-raid-map-array.patch
 	patches.drivers/hpsa-check-for-ctlr-lockup-after-command-allocation-.patch
+	patches.drivers/hpsa-return-failed-from-device-reset-abort-handlers.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
