hpsa: propagate hard_reset failures in reset_devices mode (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6580,6 +6580,7 @@
 	patches.drivers/hpsa-Fix-Wunused-but-set-variable-warning.patch
 	patches.drivers/hpsa-notice-all-request_irq-errors.patch
 	patches.drivers/hpsa-remove-0x-from-queue-depth-print-which-is-in-de.patch
+	patches.drivers/hpsa-propagate-hard_reset-failures-in-reset_devices-.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
