hpsa: notice all request_irq errors (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6578,6 +6578,7 @@
 	patches.drivers/hpsa-adjust-RAID-1-RAID-1ADM-and-RAID-6-names.patch
 	patches.drivers/hpsa-rename-free_irqs-to-hpsa_free_irqs.patch
 	patches.drivers/hpsa-Fix-Wunused-but-set-variable-warning.patch
+	patches.drivers/hpsa-notice-all-request_irq-errors.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
