--- a/series.conf
+++ b/series.conf
@@ -6590,6 +6590,7 @@
 	patches.drivers/hpsa-pass-error-from-pci_set_consistent_dma_mask-fro.patch
 	patches.drivers/hpsa-report-allocation-failures-while-allocating-SG-.patch
 	patches.drivers/hpsa-fix-memory-leak-in-hpsa_alloc_cmd_pool.patch
+	patches.drivers/hpsa-avoid-unneccesary-calls-to-resource-freeing-fun.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
