--- a/series.conf
+++ b/series.conf
@@ -6581,6 +6581,7 @@
 	patches.drivers/hpsa-notice-all-request_irq-errors.patch
 	patches.drivers/hpsa-remove-0x-from-queue-depth-print-which-is-in-de.patch
 	patches.drivers/hpsa-propagate-hard_reset-failures-in-reset_devices-.patch
+	patches.drivers/hpsa-propagate-return-value-from-board-ID-lookup.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
