--- a/series.conf
+++ b/series.conf
@@ -6612,6 +6612,7 @@
 	patches.drivers/hpsa-move-SG-descriptor-set-up-out-of-hpsa_scatter_g.patch
 	patches.drivers/hpsa-refactor-duplicated-scan-completion-code-into-a.patch
 	patches.drivers/hpsa-shorten-the-wait-for-the-CISS-doorbell-mode-cha.patch
+	patches.drivers/hpsa-detect-and-report-failures-changing-controller-.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
