hpsa: fix race between abort handler and main i/o path (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6598,6 +6598,7 @@
 	patches.drivers/hpsa-factor-out-hpsa_ciss_submit-function.patch
 	patches.drivers/hpsa-use-workqueue-to-resubmit-failed-ioaccel-comman.patch
 	patches.drivers/hpsa-honor-queue-depth-of-physical-devices.patch
+	patches.drivers/hpsa-fix-race-between-abort-handler-and-main-i-o-pat.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
