hpsa: guard against overflowing raid map array (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6603,6 +6603,7 @@
 	patches.drivers/hpsa-count-passthru-cmds-with-atomics-not-a-spin-loc.patch
 	patches.drivers/hpsa-remove-incorrect-BUG_ONs-checking-for-raid-offl.patch
 	patches.drivers/hpsa-do-not-ack-controller-events-on-controllers-tha.patch
+	patches.drivers/hpsa-guard-against-overflowing-raid-map-array.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
