--- a/series.conf
+++ b/series.conf
@@ -6599,6 +6599,7 @@
 	patches.drivers/hpsa-use-workqueue-to-resubmit-failed-ioaccel-comman.patch
 	patches.drivers/hpsa-honor-queue-depth-of-physical-devices.patch
 	patches.drivers/hpsa-fix-race-between-abort-handler-and-main-i-o-pat.patch
+	patches.drivers/hpsa-optimize-cmd_alloc-function-by-remembering-last.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
