--- a/series.conf
+++ b/series.conf
@@ -6585,6 +6585,7 @@
 	patches.drivers/hpsa-downgrade-the-Waiting-for-no-op-print-to-dev_in.patch
 	patches.drivers/hpsa-refactor-hpsa_find_board_params-to-encapsulate-.patch
 	patches.drivers/hpsa-trivial-message-and-comment-clean-ups.patch
+	patches.drivers/hpsa-report-failure-to-ioremap-config-table.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
