hpsa: add in P840ar controller model name (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6614,6 +6614,7 @@
 	patches.drivers/hpsa-shorten-the-wait-for-the-CISS-doorbell-mode-cha.patch
 	patches.drivers/hpsa-detect-and-report-failures-changing-controller-.patch
 	patches.drivers/hpsa-add-in-gen9-controller-model-names.patch
+	patches.drivers/hpsa-add-in-P840ar-controller-model-name.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
