hpsa: factor out hpsa_ciss_submit function (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6595,6 +6595,7 @@
 	patches.drivers/hpsa-get-rid-of-cmd_special_alloc-and-cmd_special_fr.patch
 	patches.drivers/hpsa-do-not-queue-commands-internally-in-driver.patch
 	patches.drivers/hpsa-do-not-request-device-rescan-on-every-ioaccel-p.patch
+	patches.drivers/hpsa-factor-out-hpsa_ciss_submit-function.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
