--- a/series.conf
+++ b/series.conf
@@ -6607,6 +6607,7 @@
 	patches.drivers/hpsa-check-for-ctlr-lockup-after-command-allocation-.patch
 	patches.drivers/hpsa-return-failed-from-device-reset-abort-handlers.patch
 	patches.drivers/hpsa-do-not-use-a-void-pointer-for-scsi_cmd-field-of.patch
+	patches.drivers/hpsa-print-CDBs-instead-of-kernel-virtual-addresses-.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
