hpsa: correct endian sparse warnings (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6571,6 +6571,7 @@
 	patches.drivers/hpsa-remove-spin-lock-around-command-allocation.patch
 	patches.drivers/hpsa-Remove-pre-production-leftovers.patch
 	patches.drivers/hpsa-silence-gcc-warning.patch
+	patches.drivers/hpsa-correct-endian-sparse-warnings.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
