hpsa: pass error from pci_set_consistent_dma_mask from hpsa_message (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6587,6 +6587,7 @@
 	patches.drivers/hpsa-trivial-message-and-comment-clean-ups.patch
 	patches.drivers/hpsa-report-failure-to-ioremap-config-table.patch
 	patches.drivers/hpsa-rename-hpsa_request_irq-to-hpsa_request_irqs.patch
+	patches.drivers/hpsa-pass-error-from-pci_set_consistent_dma_mask-fro.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
