--- a/series.conf
+++ b/series.conf
@@ -6582,6 +6582,7 @@
 	patches.drivers/hpsa-remove-0x-from-queue-depth-print-which-is-in-de.patch
 	patches.drivers/hpsa-propagate-hard_reset-failures-in-reset_devices-.patch
 	patches.drivers/hpsa-propagate-return-value-from-board-ID-lookup.patch
+	patches.drivers/hpsa-downgrade-the-Waiting-for-no-op-print-to-dev_in.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
