hpsa: remove incorrect BUG_ONs checking for raid offload enable (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6601,6 +6601,7 @@
 	patches.drivers/hpsa-fix-race-between-abort-handler-and-main-i-o-pat.patch
 	patches.drivers/hpsa-optimize-cmd_alloc-function-by-remembering-last.patch
 	patches.drivers/hpsa-count-passthru-cmds-with-atomics-not-a-spin-loc.patch
+	patches.drivers/hpsa-remove-incorrect-BUG_ONs-checking-for-raid-offl.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
