hpsa: fix memory leak in kdump hard reset (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6572,6 +6572,7 @@
 	patches.drivers/hpsa-Remove-pre-production-leftovers.patch
 	patches.drivers/hpsa-silence-gcc-warning.patch
 	patches.drivers/hpsa-correct-endian-sparse-warnings.patch
+	patches.drivers/hpsa-fix-memory-leak-in-kdump-hard-reset.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
