--- a/series.conf
+++ b/series.conf
@@ -6610,6 +6610,7 @@
 	patches.drivers/hpsa-print-CDBs-instead-of-kernel-virtual-addresses-.patch
 	patches.drivers/hpsa-do-not-use-function-pointers-in-fast-path-comma.patch
 	patches.drivers/hpsa-move-SG-descriptor-set-up-out-of-hpsa_scatter_g.patch
+	patches.drivers/hpsa-refactor-duplicated-scan-completion-code-into-a.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
