--- a/series.conf
+++ b/series.conf
@@ -6602,6 +6602,7 @@
 	patches.drivers/hpsa-optimize-cmd_alloc-function-by-remembering-last.patch
 	patches.drivers/hpsa-count-passthru-cmds-with-atomics-not-a-spin-loc.patch
 	patches.drivers/hpsa-remove-incorrect-BUG_ONs-checking-for-raid-offl.patch
+	patches.drivers/hpsa-do-not-ack-controller-events-on-controllers-tha.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
