--- a/series.conf
+++ b/series.conf
@@ -6615,6 +6615,7 @@
 	patches.drivers/hpsa-detect-and-report-failures-changing-controller-.patch
 	patches.drivers/hpsa-add-in-gen9-controller-model-names.patch
 	patches.drivers/hpsa-add-in-P840ar-controller-model-name.patch
+	patches.drivers/hpsa-Use-local-workqueues-instead-of-system-workqueu.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
