hpsa: move SG descriptor set-up out of hpsa_scatter_gather() (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6609,6 +6609,7 @@
 	patches.drivers/hpsa-do-not-use-a-void-pointer-for-scsi_cmd-field-of.patch
 	patches.drivers/hpsa-print-CDBs-instead-of-kernel-virtual-addresses-.patch
 	patches.drivers/hpsa-do-not-use-function-pointers-in-fast-path-comma.patch
+	patches.drivers/hpsa-move-SG-descriptor-set-up-out-of-hpsa_scatter_g.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
