hpsa: refactor hpsa_find_board_params() to encapsulate legacy test (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6583,6 +6583,7 @@
 	patches.drivers/hpsa-propagate-hard_reset-failures-in-reset_devices-.patch
 	patches.drivers/hpsa-propagate-return-value-from-board-ID-lookup.patch
 	patches.drivers/hpsa-downgrade-the-Waiting-for-no-op-print-to-dev_in.patch
+	patches.drivers/hpsa-refactor-hpsa_find_board_params-to-encapsulate-.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
