hpsa: rename hpsa_request_irq to hpsa_request_irqs (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6586,6 +6586,7 @@
 	patches.drivers/hpsa-refactor-hpsa_find_board_params-to-encapsulate-.patch
 	patches.drivers/hpsa-trivial-message-and-comment-clean-ups.patch
 	patches.drivers/hpsa-report-failure-to-ioremap-config-table.patch
+	patches.drivers/hpsa-rename-hpsa_request_irq-to-hpsa_request_irqs.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
