--- a/series.conf
+++ b/series.conf
@@ -6593,6 +6593,7 @@
 	patches.drivers/hpsa-avoid-unneccesary-calls-to-resource-freeing-fun.patch
 	patches.drivers/hpsa-reserve-some-commands-for-use-by-driver.patch
 	patches.drivers/hpsa-get-rid-of-cmd_special_alloc-and-cmd_special_fr.patch
+	patches.drivers/hpsa-do-not-queue-commands-internally-in-driver.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
