--- a/series.conf
+++ b/series.conf
@@ -6606,6 +6606,7 @@
 	patches.drivers/hpsa-guard-against-overflowing-raid-map-array.patch
 	patches.drivers/hpsa-check-for-ctlr-lockup-after-command-allocation-.patch
 	patches.drivers/hpsa-return-failed-from-device-reset-abort-handlers.patch
+	patches.drivers/hpsa-do-not-use-a-void-pointer-for-scsi_cmd-field-of.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
