--- a/series.conf
+++ b/series.conf
@@ -6592,6 +6592,7 @@
 	patches.drivers/hpsa-fix-memory-leak-in-hpsa_alloc_cmd_pool.patch
 	patches.drivers/hpsa-avoid-unneccesary-calls-to-resource-freeing-fun.patch
 	patches.drivers/hpsa-reserve-some-commands-for-use-by-driver.patch
+	patches.drivers/hpsa-get-rid-of-cmd_special_alloc-and-cmd_special_fr.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
