hpsa: change how SA controllers are reset (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6574,6 +6574,7 @@
 	patches.drivers/hpsa-correct-endian-sparse-warnings.patch
 	patches.drivers/hpsa-fix-memory-leak-in-kdump-hard-reset.patch
 	patches.drivers/hpsa-turn-off-interrupts-when-kdump-starts.patch
+	patches.drivers/hpsa-change-how-SA-controllers-are-reset.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
