hpsa: shorten the wait for the CISS doorbell mode change ack (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6611,6 +6611,7 @@
 	patches.drivers/hpsa-do-not-use-function-pointers-in-fast-path-comma.patch
 	patches.drivers/hpsa-move-SG-descriptor-set-up-out-of-hpsa_scatter_g.patch
 	patches.drivers/hpsa-refactor-duplicated-scan-completion-code-into-a.patch
+	patches.drivers/hpsa-shorten-the-wait-for-the-CISS-doorbell-mode-cha.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
