hpsa: reserve some commands for use by driver (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6591,6 +6591,7 @@
 	patches.drivers/hpsa-report-allocation-failures-while-allocating-SG-.patch
 	patches.drivers/hpsa-fix-memory-leak-in-hpsa_alloc_cmd_pool.patch
 	patches.drivers/hpsa-avoid-unneccesary-calls-to-resource-freeing-fun.patch
+	patches.drivers/hpsa-reserve-some-commands-for-use-by-driver.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
