hpsa: count passthru cmds with atomics, not a spin locked int (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6600,6 +6600,7 @@
 	patches.drivers/hpsa-honor-queue-depth-of-physical-devices.patch
 	patches.drivers/hpsa-fix-race-between-abort-handler-and-main-i-o-pat.patch
 	patches.drivers/hpsa-optimize-cmd_alloc-function-by-remembering-last.patch
+	patches.drivers/hpsa-count-passthru-cmds-with-atomics-not-a-spin-loc.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
