--- a/series.conf
+++ b/series.conf
@@ -6575,6 +6575,7 @@
 	patches.drivers/hpsa-fix-memory-leak-in-kdump-hard-reset.patch
 	patches.drivers/hpsa-turn-off-interrupts-when-kdump-starts.patch
 	patches.drivers/hpsa-change-how-SA-controllers-are-reset.patch
+	patches.drivers/hpsa-adjust-RAID-1-RAID-1ADM-and-RAID-6-names.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
