hpsa: rename free_irqs to hpsa_free_irqs (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6576,6 +6576,7 @@
 	patches.drivers/hpsa-turn-off-interrupts-when-kdump-starts.patch
 	patches.drivers/hpsa-change-how-SA-controllers-are-reset.patch
 	patches.drivers/hpsa-adjust-RAID-1-RAID-1ADM-and-RAID-6-names.patch
+	patches.drivers/hpsa-rename-free_irqs-to-hpsa_free_irqs.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
