hpsa: Bump version to 3.4.8 (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -6616,6 +6616,7 @@
 	patches.drivers/hpsa-add-in-gen9-controller-model-names.patch
 	patches.drivers/hpsa-add-in-P840ar-controller-model-name.patch
 	patches.drivers/hpsa-Use-local-workqueues-instead-of-system-workqueu.patch
+	patches.drivers/hpsa-Bump-version-to-3.4.8.patch
 
 	patches.drivers/cciss-update-to-4.6.28.patch
 	patches.drivers/cciss-stable-controller-enumeration.patch
