atomic: implement generic atomic_dec_if_positive() (bnc#913241,FATE#317338).

--- a/series.conf
+++ b/series.conf
@@ -1875,6 +1875,7 @@
 	patches.fixes/xfs-re-enable-non-blocking-behaviour-in-xfs_map_bloc.patch
 
 	patches.fixes/asm-generic-architecture-independent-readq-writeq-fo.patch
+	patches.fixes/atomic-implement-generic-atomic_dec_if_positive.patch
 
 	########################################################
 	#
