fs/pipe.c: add ->statfs callback for pipefs (bsc#916848).

--- a/series.conf
+++ b/series.conf
@@ -1699,6 +1699,8 @@
 
 	patches.fixes/fsnotify-Fix-handling-of-renames-in-audit.patch
 
+	patches.fixes/fs-pipe.c-add-statfs-callback-for-pipefs.patch
+
 	########################################################
 	# IPC patches
 	########################################################
