--- a/series.conf
+++ b/series.conf
@@ -13472,6 +13472,7 @@
 	# Sysfs rework for speeding up large machines boot times bnc#919589
 	patches.suse/0001-sysfs-use-rb-tree-for-name-lookups.patch
 	patches.suse/0002-sysfs-use-rb-tree-for-inode-number-lookup.patch
+	patches.suse/0003-sysfs-Make-sysfs_rename-safe-with-sysfs_dirents-in-r.patch
 
 	########################################################
 	# USB
