sysfs: use rb-tree for inode number lookup (bnc#919589).

--- a/series.conf
+++ b/series.conf
@@ -13471,6 +13471,7 @@
 
 	# Sysfs rework for speeding up large machines boot times bnc#919589
 	patches.suse/0001-sysfs-use-rb-tree-for-name-lookups.patch
+	patches.suse/0002-sysfs-use-rb-tree-for-inode-number-lookup.patch
 
 	########################################################
 	# USB
