kabi: fix for changes in the sysfs_dirent structure (bnc#919589).

--- a/series.conf
+++ b/series.conf
@@ -13473,6 +13473,7 @@
 	patches.suse/0001-sysfs-use-rb-tree-for-name-lookups.patch
 	patches.suse/0002-sysfs-use-rb-tree-for-inode-number-lookup.patch
 	patches.suse/0003-sysfs-Make-sysfs_rename-safe-with-sysfs_dirents-in-r.patch
+        patches.kabi/0004-kabi-fix-for-changes-in-the-sysfs_dirent-structure.patch
 
 	########################################################
 	# USB
