sysfs: use rb-tree for name lookups (bnc919589).

--- a/series.conf
+++ b/series.conf
@@ -13469,6 +13469,9 @@
 	patches.fixes/sysfs-count-subdirectories.patch
 	patches.fixes/asm-generic-architecture-independent-readq-writeq-fo.patch
 
+	# Sysfs rework for speeding up large machines boot times bnc#919589
+	patches.suse/0001-sysfs-use-rb-tree-for-name-lookups.patch
+
 	########################################################
 	# USB
 	########################################################
