cifs: fix use-after-free bug in find_writable_file (bnc#909477).

--- a/series.conf
+++ b/series.conf
@@ -2467,6 +2467,7 @@
 	patches.fixes/cifs-provide-sane-values-for-nlink-from-non-unix-servers.patch
 	patches.fixes/cifs-ensure-that-uncached-writes-handle-unmapped-are.patch
 	patches.fixes/cifs-delay-super-block-destruction-until-all-cifsFil.patch
+	patches.fixes/cifs-fix-use-after-free-bug-in-find_writable_file.patch
 
 	########################################################
 	# ext2/ext3
