--- a/series.conf
+++ b/series.conf
@@ -3700,6 +3700,7 @@
 	patches.suse/btrfs-8305-fix-kfree-on-list_head-in-btrfs_lookup_csums_r.patch
 	patches.suse/btrfs-8306-make-xattr-replace-operations-atomic.patch
 	patches.suse/btrfs-8307-make-sure-we-wait-on-logged-extents-when-fsycn.patch
+	patches.suse/btrfs-8308-fix-fs-corruption-on-transaction-abort-if-devi.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
