--- a/series.conf
+++ b/series.conf
@@ -3703,6 +3703,7 @@
 	patches.suse/btrfs-8308-fix-fs-corruption-on-transaction-abort-if-devi.patch
 	patches.suse/btrfs-8309-call-inode_dec_link_count-on-mkdir-error-path.patch
 	patches.suse/btrfs-8310-avoid-returning-ENOMEM-in-convert_extent_bit-t.patch
+	patches.suse/btrfs-8311-avoid-premature-ENOMEM-in-clear_extent_bit.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
