--- a/series.conf
+++ b/series.conf
@@ -3701,6 +3701,7 @@
 	patches.suse/btrfs-8306-make-xattr-replace-operations-atomic.patch
 	patches.suse/btrfs-8307-make-sure-we-wait-on-logged-extents-when-fsycn.patch
 	patches.suse/btrfs-8308-fix-fs-corruption-on-transaction-abort-if-devi.patch
+	patches.suse/btrfs-8309-call-inode_dec_link_count-on-mkdir-error-path.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
