--- a/series.conf
+++ b/series.conf
@@ -3699,6 +3699,7 @@
 	patches.suse/btrfs-8304-fix-race-in-WAIT_SYNC-ioctl.patch
 	patches.suse/btrfs-8305-fix-kfree-on-list_head-in-btrfs_lookup_csums_r.patch
 	patches.suse/btrfs-8306-make-xattr-replace-operations-atomic.patch
+	patches.suse/btrfs-8307-make-sure-we-wait-on-logged-extents-when-fsycn.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
