--- a/series.conf
+++ b/series.conf
@@ -3698,6 +3698,7 @@
 	patches.suse/btrfs-8303-fix-crash-of-btrfs_release_extent_buffer_page.patch
 	patches.suse/btrfs-8304-fix-race-in-WAIT_SYNC-ioctl.patch
 	patches.suse/btrfs-8305-fix-kfree-on-list_head-in-btrfs_lookup_csums_r.patch
+	patches.suse/btrfs-8306-make-xattr-replace-operations-atomic.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
