--- a/series.conf
+++ b/series.conf
@@ -3713,6 +3713,7 @@
 	patches.suse/btrfs-8321-cleanup-rename-a-few-variables-in-btrfs_read_s.patch
 	patches.suse/btrfs-8322-add-more-checks-to-btrfs_read_sys_array.patch
 	patches.suse/btrfs-8323-fix-scheduler-warning-when-syncing-log.patch
+	patches.suse/btrfs-8324-abort-the-transaction-if-we-fail-to-update-the.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
