--- a/series.conf
+++ b/series.conf
@@ -3709,6 +3709,7 @@
 	patches.suse/btrfs-8316-fix-typos-in-btrfs_check_super_valid.patch
 	patches.suse/btrfs-8317-fix-setup_leaf_for_split-to-avoid-leaf-corrupt.patch
 	patches.suse/btrfs-8319-more-superblock-checks-lower-bounds-on-devices.patch
+	patches.suse/btrfs-8320-add-checks-for-sys_chunk_array-sizes.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
