--- a/series.conf
+++ b/series.conf
@@ -3706,6 +3706,7 @@
 	patches.suse/btrfs-8311-avoid-premature-ENOMEM-in-clear_extent_bit.patch
 	patches.suse/btrfs-8314-add-more-superblock-checks.patch
 	patches.suse/btrfs-8315-use-macro-accessors-in-superblock-validation-c.patch
+	patches.suse/btrfs-8316-fix-typos-in-btrfs_check_super_valid.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
