--- a/series.conf
+++ b/series.conf
@@ -3711,6 +3711,7 @@
 	patches.suse/btrfs-8319-more-superblock-checks-lower-bounds-on-devices.patch
 	patches.suse/btrfs-8320-add-checks-for-sys_chunk_array-sizes.patch
 	patches.suse/btrfs-8321-cleanup-rename-a-few-variables-in-btrfs_read_s.patch
+	patches.suse/btrfs-8322-add-more-checks-to-btrfs_read_sys_array.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
