--- a/series.conf
+++ b/series.conf
@@ -3707,6 +3707,7 @@
 	patches.suse/btrfs-8314-add-more-superblock-checks.patch
 	patches.suse/btrfs-8315-use-macro-accessors-in-superblock-validation-c.patch
 	patches.suse/btrfs-8316-fix-typos-in-btrfs_check_super_valid.patch
+	patches.suse/btrfs-8317-fix-setup_leaf_for_split-to-avoid-leaf-corrupt.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
