--- a/series.conf
+++ b/series.conf
@@ -3704,6 +3704,7 @@
 	patches.suse/btrfs-8309-call-inode_dec_link_count-on-mkdir-error-path.patch
 	patches.suse/btrfs-8310-avoid-returning-ENOMEM-in-convert_extent_bit-t.patch
 	patches.suse/btrfs-8311-avoid-premature-ENOMEM-in-clear_extent_bit.patch
+	patches.suse/btrfs-8314-add-more-superblock-checks.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
