--- a/series.conf
+++ b/series.conf
@@ -3714,6 +3714,7 @@
 	patches.suse/btrfs-8322-add-more-checks-to-btrfs_read_sys_array.patch
 	patches.suse/btrfs-8323-fix-scheduler-warning-when-syncing-log.patch
 	patches.suse/btrfs-8324-abort-the-transaction-if-we-fail-to-update-the.patch
+	patches.suse/btrfs-8325-fix-lost-return-value-due-to-variable-shadowin.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
