supported.conf: Add i40e (Intel(R) Ethernet Controller XL710 Family support)

--- a/supported.conf
+++ b/supported.conf
@@ -1017,6 +1017,8 @@
 		drivers/net/ethernet/intel/e100			# Intel(R) PRO/100 Network Driver
 		drivers/net/ethernet/intel/e1000/e1000		# Intel(R) PRO/1000 Network Driver
 		drivers/net/ethernet/intel/e1000e/e1000e	# Intel(R) PRO/1000 PCIe Network Driver
+		drivers/net/ethernet/intel/i40e/i40e
+		drivers/net/ethernet/intel/i40evf/i40evf
 		drivers/net/ethernet/intel/igb/igb		# Intel Gigabit Ethernet driver
 		drivers/net/ethernet/intel/igbvf/igbvf		# Intel Gigabit Ethernet SR-IOV driver
 		drivers/net/ethernet/intel/ixgb/ixgb		# Intel(R) PRO/10GbE Network Driver
