--- a/series.conf
+++ b/series.conf
@@ -15407,6 +15407,7 @@
 	patches.drivers/e1000e-0161-e1000e-delete-excessive-space-character-in-debug-mes.patch
 	patches.drivers/e1000e-0162-e1000e-Fix-TSO-with-non-accelerated-vlans.patch
 	patches.fixes/net-Add-functions-for-handling-padding-frame-and-add.patch
+	patches.drivers/e1000e-0164-ethernet-intel-Use-eth_skb_pad-and-skb_put_padto-hel.patch
 
 	# igbvf SP4 update (fate#317398, bsc#909493)
 	patches.drivers/0001-net-call-add_device_randomness-only-after-successful.patch
