--- a/series.conf
+++ b/series.conf
@@ -15409,6 +15409,7 @@
 	patches.fixes/net-Add-functions-for-handling-padding-frame-and-add.patch
 	patches.drivers/e1000e-0164-ethernet-intel-Use-eth_skb_pad-and-skb_put_padto-hel.patch
 	patches.drivers/e1000e-0165-e1000e-Fix-82572EI-that-has-no-hardware-timestamp-su.patch
+	patches.drivers/e1000e-0166-e1000e-initial-support-for-i219.patch
 
 	# igbvf SP4 update (fate#317398, bsc#909493)
 	patches.drivers/0001-net-call-add_device_randomness-only-after-successful.patch
