e1000e: remove calls to ioremap/unmap for NVM addr (bug#909495 FATE#317394).

--- a/series.conf
+++ b/series.conf
@@ -15411,6 +15411,7 @@
 	patches.drivers/e1000e-0165-e1000e-Fix-82572EI-that-has-no-hardware-timestamp-su.patch
 	patches.drivers/e1000e-0166-e1000e-initial-support-for-i219.patch
 	patches.drivers/e1000e-0167-e1000e-fix-obscure-comments.patch
+	patches.drivers/e1000e-0168-e1000e-remove-calls-to-ioremap-unmap-for-NVM-addr.patch
 
 	# igbvf SP4 update (fate#317398, bsc#909493)
 	patches.drivers/0001-net-call-add_device_randomness-only-after-successful.patch
