--- a/series.conf
+++ b/series.conf
@@ -15410,6 +15410,7 @@
 	patches.drivers/e1000e-0164-ethernet-intel-Use-eth_skb_pad-and-skb_put_padto-hel.patch
 	patches.drivers/e1000e-0165-e1000e-Fix-82572EI-that-has-no-hardware-timestamp-su.patch
 	patches.drivers/e1000e-0166-e1000e-initial-support-for-i219.patch
+	patches.drivers/e1000e-0167-e1000e-fix-obscure-comments.patch
 
 	# igbvf SP4 update (fate#317398, bsc#909493)
 	patches.drivers/0001-net-call-add_device_randomness-only-after-successful.patch
