--- a/series.conf
+++ b/series.conf
@@ -3719,6 +3719,7 @@
 	# bnc#898375
 	patches.suse/btrfs-8255-fix-crash-of-compressed-writes.patch
 	patches.suse/btrfs-8256-limit-delalloc-pages-outside-of-find_delalloc_.patch
+	patches.suse/btrfs-cleanup-orphans-while-looking-up-default-subvolume.patch
 	# end of bnc#898375
 
 	########################################################
