--- a/series.conf
+++ b/series.conf
@@ -21690,8 +21690,8 @@
 	patches.suse/suse-hv-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
 	patches.suse/suse-hv-scsi-storvsc-Always-send-on-the-selected-outgoing-ch.patch
 	patches.suse/suse-hv-scsi-storvsc-Retrieve-information-about-the-capabili.patch
-	patches.suse/suse-hv-scsi-storvsc-Set-the-tablesize-based-on-the-informat.patch
-	patches.suse/suse-hv-scsi-storvsc-Enable-clustering.patch
++923775	patches.suse/suse-hv-scsi-storvsc-Set-the-tablesize-based-on-the-informat.patch
++923775	patches.suse/suse-hv-scsi-storvsc-Enable-clustering.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
