driver core: Add BUS_NOTIFY_REMOVED_DEVICE event (bnc#920960).

--- a/series.conf
+++ b/series.conf
@@ -22444,6 +22444,9 @@
 	patches.drivers/0002-x86-efi-Fix-earlyprintk-off-by-one-bug.patch 
 	patches.drivers/0003-x86-efi-earlyprintk-efi-keep-fix.patch
 
+	# bsc#920960
+	patches.drivers/0001-driver-core-add-bus_notify_removed_device-event
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
