--- a/series.conf
+++ b/series.conf
@@ -22447,6 +22447,7 @@
 	# bsc#920960
 	patches.drivers/0001-driver-core-add-bus_notify_removed_device-event
 	patches.drivers/0002-iommu-vt-d-only-remove-domain-when-device-is-removed
+	patches.drivers/iommu-vt-d-fix-dmar_domain-leak-in-iommu_attach_device
 
 	########################################################
 	# You'd better have a good reason for adding a patch
