iommu/vt-d: Only remove domain when device is removed (bnc#920960).

--- a/series.conf
+++ b/series.conf
@@ -22446,6 +22446,7 @@
 
 	# bsc#920960
 	patches.drivers/0001-driver-core-add-bus_notify_removed_device-event
+	patches.drivers/0002-iommu-vt-d-only-remove-domain-when-device-is-removed
 
 	########################################################
 	# You'd better have a good reason for adding a patch
