zcrypt: Early hwrng request prevent crypto devices to get online (bnc#923450,LTC#122974).

--- a/series.conf
+++ b/series.conf
@@ -1247,6 +1247,8 @@
 
 	patches.arch/s390-sles11sp4-01-01-dasd-retry-partition-detection.patch
 
+	patches.arch/s390-sles11sp4-02-01-zcrypt-improve-device-probing.patch
+
 	########################################################
 	# VM/FS patches
 	########################################################
