mm: fix anon_vma->degree underflow in anon_vma endless growing prevention (bnc#904242).

--- a/series.conf
+++ b/series.conf
@@ -1598,6 +1598,7 @@
 	patches.fixes/mm-prevent-endless-growth-of-anon_vma-hierarchy
 	patches.kabi/mm-prevent-endless-growth-of-anon_vma-hierarchy-kabi
 	patches.fixes/mm-fix-corner-case-in-anon_vma-endless-growing-prevention.patch
+	patches.fixes/mm-fix-anon_vma-degree-underflow-in-anon_vma-endless.patch
 
 	# bnc#883518, CVE-2014-4171
 	patches.fixes/shmem-fix-faulting-into-a-hole-not-taking-i_mutex.patch
