powerpc+sparc64/mm: Remove hack in mmap randomize layout (bsc#917839).

--- a/series.conf
+++ b/series.conf
@@ -834,6 +834,8 @@
 	#bsc#919682
 	patches.arch/powerpc-Make-chip-id-information-available-to-usersp.patch
 
+        #bsc#917839
+        patches.fixes/powerpc-bsc917839.patch
 	########################################################
 	# S/390
 	########################################################
