configfs: fix race between dentry put and lookup (bnc#924333).

--- a/series.conf
+++ b/series.conf
@@ -1704,6 +1704,8 @@
 
 	patches.fixes/fs-pipe.c-add-statfs-callback-for-pipefs.patch
 
+	patches.fixes/configfs-fix-race-between-dentry-put-and-lookup.patch
+
 	########################################################
 	# IPC patches
 	########################################################
