epoll: fix use-after-free in eventpoll_release_file (epoll scaling).

--- a/series.conf
+++ b/series.conf
@@ -5228,6 +5228,7 @@
 	patches.suse/0001-epoll-optimize-EPOLL_CTL_DEL-using-rcu.patch
 	patches.suse/0002-epoll-do-not-take-global-epmutex-for-simple-topologi.patch
 	patches.suse/0003-epoll-do-not-take-the-nested-ep-mtx-on-EPOLL_CTL_DEL.patch
+	patches.fixes/epoll-fix-use-after-free-in-eventpoll_release_file.patch
 	patches.fixes/nfs-increase-callback-threads
 	patches.fixes/nfs-umount-fix
 
