dasd: Missing partition after online processing (bnc#917120, LTC#120565).

--- a/series.conf
+++ b/series.conf
@@ -1174,6 +1174,8 @@
 	patches.arch/s390-sles11sp3-26-02-vdso-thread-cputime.patch
 	patches.arch/s390-sles11sp3-26-03-zcrypt-ap-max-domain-id.patch
 
+	patches.arch/s390-sles11sp3-27-01-dasd-retry-partition-detection.patch
+
 	########################################################
 	# VM/FS patches
 	########################################################
