- Btrfs: fix an while-loop of listxattr. - Refresh   patches.suse/btrfs-0629-fix-buffer-leak-in-btrfs_next_old_leaf.patch. - Refresh   patches.suse/btrfs-0644-add-helper-for-tree-enumeration.patch.

--- a/series.conf
+++ b/series.conf
@@ -3193,6 +3193,7 @@
 	patches.suse/btrfs-0903-increase-btrfs_MAX_MIRRORS-by-one-for-dev-repl.patch
 	patches.suse/btrfs-0904-allow-repair-code-to-include-target-disk-when-.patch
 	patches.suse/btrfs-0905-add-support-for-device-replace-ioctls.patch
+	patches.suse/btrfs-0957-fix-an-while-loop-of-listxattr.patch
 	patches.suse/btrfs-0906-do-not-warn_on-io_ctl-cur-in-io_ctl_map_page.patch
 	patches.suse/btrfs-0907-pass-root-object-into-btrfs_ioctl_-start-wait-.patch
 	patches.suse/btrfs-0908-don-t-start-a-new-transaction-when-starting-sy.patch
