md: don't give up looking for spares on first failure-to-add (bnc#908706).

--- a/series.conf
+++ b/series.conf
@@ -15080,6 +15080,8 @@
 	#bnc 891641
 	patches.fixes/0001-md-plug_cnt.fix
 
+	patches.fixes/0001-md-don-t-give-up-looking-for-spares-on-first-failure.patch
+
 	##########################################################
 	#
 	# Security stuff
