--- a/series.conf
+++ b/series.conf
@@ -1208,6 +1208,7 @@
 	patches.suse/pagecache-limit-reduce-zone-lrulock-bouncing-fix.patch
 	patches.kabi/pagecache-limit-reduce-zone-lrulock-bouncing-kabi.patch
 	patches.suse/pagecachelimit_batch_huge_nr_to_scan.patch
+	patches.suse/pagecache-limit-vmstat_counters.patch
 
 	patches.suse/mm-compaction-migrate-pages-ia64.patch
 
