--- a/series.conf
+++ b/series.conf
@@ -2737,6 +2737,7 @@
 	patches.suse/btrfs-enhance-superblock-sanity-checks.patch
 	patches.suse/btrfs-disallow-unequal-data-metadata-blocksize-for-m.patch
 
+	patches.suse/btrfs-0463-remove-the-second-argument-of-k-un-map_atomic.patch
 	patches.suse/btrfs-0468-allow-metadata-blocks-larger-than-the-page-siz.patch
 	patches.suse/btrfs-0469-set-page-private-to-the-eb.patch
 	patches.suse/btrfs-0470-only-use-the-existing-eb-if-it-s-count-isn-t-0.patch
