- pagecache limit: fix wrong nr_reclaimed count (FATE#309111,   bnc#924701). - pagecache limit: add tracepoints (bnc#924701). - Refresh   patches.fixes/mm-vmscan-do-not-stall-on-writeback-during-memory-compaction.patch. - Refresh patches.suse/pagecache-limit-fix-shmem-deadlock.patch.

--- a/series.conf
+++ b/series.conf
@@ -1209,6 +1209,8 @@
 	patches.kabi/pagecache-limit-reduce-zone-lrulock-bouncing-kabi.patch
 	patches.suse/pagecachelimit_batch_huge_nr_to_scan.patch
 	patches.suse/pagecache-limit-vmstat_counters.patch
+	patches.suse/pagecache-limit-fix-wrong-reclaimed-count.patch
+	patches.suse/pagecache-limit-tracepoints.patch
 
 	patches.suse/mm-compaction-migrate-pages-ia64.patch
 
