- btrfs: kill magical embedded struct superblock. - Refresh   patches.suse/0002-btrfs-Introduce-btrfs_get_maps_dev.patch. - Refresh   patches.suse/btrfs-0242-fix-tree-corruption-after-multi-thread-snapsho.patch. - Refresh   patches.suse/btrfs-0248-fix-stat-blocks-accounting.patch. - Refresh   patches.suse/btrfs-0662-introduce-subvol-uuids-and-times.patch. - Refresh   patches.suse/btrfs-0935-rename-root_times_lock-to-root_item_lock.patch. - Refresh   patches.suse/btrfs-1030-use-the-inode-own-lock-to-protect-its-delalloc.patch. - Refresh   patches.suse/btrfs-1425-fix-memory-leak-of-orphan-block-rsv.patch. - Refresh   patches.suse/btrfs-disk-io-__setup_root-should-return-void.

--- a/series.conf
+++ b/series.conf
@@ -2497,6 +2497,7 @@
 	########################################################
 	# btrfs
 	########################################################
+	patches.suse/btrfs-0001-kill-magical-embedded-struct-superblock.patch
 	patches.suse/btrfs-0002-try-to-only-do-one-btrfs_search_slot-in-do_set.patch
 	patches.suse/btrfs-0003-do-transaction-space-reservation-before-joinin.patch
 	patches.suse/btrfs-0004-serialize-flushers-in-reserve_metadata_bytes.patch
