--- a/series.conf
+++ b/series.conf
@@ -2588,6 +2588,7 @@
 	patches.suse/btrfs-0107-make-sure-not-to-defrag-extents-past-i_size.patch
 
 	# 3.1
+	patches.suse/btrfs-0108-compat-vfs-nlink.patch
         patches.suse/btrfs-0110-move-stuff-around-in-btrfs_inode-to-get-better.patch
         patches.suse/btrfs-0111-kill-reserved_bytes-in-inode.patch
         patches.suse/btrfs-0112-use-d_obtain_alias-when-mounting-subvol-subvol.patch
