- vfs: switch a bunch of places to mnt_want_write_file().
Partial backport.

- Refresh
  patches.suse/btrfs-0668-Push-mnt_want_write-outside-of-i_mutex.patch.
- Refresh
  patches.suse/btrfs-0894-disallow-mutually-exclusive-admin-operations-f.patch.
- Refresh
  patches.suse/btrfs-0978-fix-mutually-exclusive-op-is-running-error-cod.patch.
- Refresh
  patches.suse/btrfs-0981-reorder-locks-and-sanity-checks-in-btrfs_ioctl.patch.
- Refresh
  patches.suse/btrfs-1417-btrfs_ioctl_clone-Move-clone-code-into-it-s-own-func.patch.

--- a/series.conf
+++ b/series.conf
@@ -2878,8 +2878,9 @@
 	patches.suse/btrfs-0395-fix-compiler-warnings-on-32-bit-systems.patch
 	patches.suse/btrfs-0396-fix-locking-issues-in-find_parent_nodes.patch
 	patches.suse/btrfs-0397-fix-casting-error-in-scrub-reada-code.patch
-	# 3.3
 	patches.suse/vfs-mnt_drop_write_file.patch
+	patches.suse/vfs-partial-switch-a-bunch-of-places-to-mnt_want_write_file.patch
+	# 3.3
 	patches.suse/btrfs-0400-Fix-typo-in-free-space-cache.c.patch
 	patches.suse/btrfs-0401-remove-the-ideal-caching-code.patch
 	patches.suse/btrfs-0402-remove-search_start-and-search_end-from-find_f.patch
