vfs: switch open-coded instances of d_make_root() to new helper.

--- a/series.conf
+++ b/series.conf
@@ -2882,6 +2882,7 @@
 	patches.suse/vfs-partial-switch-a-bunch-of-places-to-mnt_want_write_file.patch
 	# 3.3
 	patches.suse/btrfs-0400-Fix-typo-in-free-space-cache.c.patch
+	patches.suse/vfs-partial-switch-open-coded-instances-of-d_make_root-to-new-he.patch
 	patches.suse/btrfs-0401-remove-the-ideal-caching-code.patch
 	patches.suse/btrfs-0402-remove-search_start-and-search_end-from-find_f.patch
 	patches.suse/btrfs-0403-adjust-the-write_lock_level-as-we-unlock.patch
