Provide/Obsolete all subpackages of old flavors (bnc#925567)

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -857,6 +857,7 @@ Requires(pre):  coreutils awk
 Requires(post): module-init-tools
 Requires(post): perl-Bootloader
 Requires(post): mkinitrd
+@PROVIDES_OBSOLETES_EXTRA@
 Supplements:    packageand(product(SUSE_SLED):%{name}_%_target_cpu)
 %ifarch %ix86
 Conflicts:      libc.so.6()(64bit)
@@ -911,6 +912,7 @@ Requires:       kernel-source%variant = %version-%source_rel
 %if %CONFIG_MODULE_SIG == "y"
 Requires:       openssl
 %endif
+@PROVIDES_OBSOLETES_DEVEL@
 Supplements:    packageand(%name:kernel-source)
 
 %description devel
@@ -958,6 +960,7 @@ License:        GPL v2 only
 Group:          System/Kernel
 Provides:       multiversion(kernel)
 Requires:       %{name}_%_target_cpu = %version-%release
+@PROVIDES_OBSOLETES_HMAC@
 
 %description hmac
 This package contains HMAC hashes for the kernel image and modules.
