- vfs: new helper: file_inode(file).
- Refresh
  patches.suse/btrfs-1131-fix-missing-qgroup-reservation-before-fallocat.patch.
- Refresh
  patches.suse/btrfs-1302-fix-estale-with-btrfs-send.patch.
- Refresh
  patches.suse/btrfs-1317-check-if-we-can-nocow-if-we-don-t-have-data-sp.patch.
- Refresh
  patches.suse/btrfs-1417-btrfs_ioctl_clone-Move-clone-code-into-it-s-own-func.patch.
- Refresh
  patches.suse/btrfs-8223-Return-EXDEV-for-cross-file-system-snapshot.patch.
- Refresh
  patches.suse/btrfs-8888-add-allow_unsupported-module-parameter.patch.

--- a/series.conf
+++ b/series.conf
@@ -3526,6 +3526,7 @@
 	patches.suse/btrfs-0999-fix-EDQUOT-handling-in-btrfs_delalloc_reserve_.patch
 	patches.suse/btrfs-1000-move-d_instantiate-outside-the-transaction-dur.patch
 	# 3.8
+	patches.suse/vfs-compat-new-helper-file_inode-file.patch
 	patches.suse/btrfs-1001-fix-crash-in-log-replay-with-qgroups-enabled.patch
 	patches.suse/btrfs-1002-access-superblock-via-pagecache-in-scan_one_de.patch
 	patches.suse/btrfs-1003-use-slabs-for-delayed-reference-allocation.patch
