ALSA: hda_intel: apply the Seperate stream_tag for Sunrise Point (bsc#925370).

--- a/series.conf
+++ b/series.conf
@@ -14573,6 +14573,7 @@
 	patches.drivers/alsa-hda-020-hdmi-apply-Valleyview-fix-ups-to-Cherryview
 	patches.drivers/alsa-hda-021-Separate-stream_tag-for-input-an
 	patches.drivers/alsa-hda-022-apply-the-Seperate-stream_tag-for-Sky
+	patches.drivers/alsa-hda-023-apply-the-Seperate-stream_tag-for-Sun
 
 	##########################################################
 	# Char + Serial
