ALSA: hda_intel: apply the Seperate stream_tag for Skylake (bsc#925370).

--- a/series.conf
+++ b/series.conf
@@ -14572,6 +14572,7 @@
 	patches.drivers/alsa-hda-019-add-codec-ID-for-Braswell-display-audio-cod
 	patches.drivers/alsa-hda-020-hdmi-apply-Valleyview-fix-ups-to-Cherryview
 	patches.drivers/alsa-hda-021-Separate-stream_tag-for-input-an
+	patches.drivers/alsa-hda-022-apply-the-Seperate-stream_tag-for-Sky
 
 	##########################################################
 	# Char + Serial
