--- a/series.conf
+++ b/series.conf
@@ -14571,6 +14571,7 @@
 	patches.drivers/alsa-hda-018-verify-pin-converter-connection-on-unsol-ev
 	patches.drivers/alsa-hda-019-add-codec-ID-for-Braswell-display-audio-cod
 	patches.drivers/alsa-hda-020-hdmi-apply-Valleyview-fix-ups-to-Cherryview
+	patches.drivers/alsa-hda-021-Separate-stream_tag-for-input-an
 
 	##########################################################
 	# Char + Serial
