--- a/series.conf
+++ b/series.conf
@@ -1206,8 +1206,10 @@
 	patches.suse/pagecache-limit-warn-on-usage.patch
 	patches.suse/pagecache-limit-reduce-zone-lrulock-bouncing.patch
 	patches.suse/pagecache-limit-reduce-zone-lrulock-bouncing-fix.patch
+	patches.suse/pagecache-limit-reduce-zone-lrulock-bouncing-fix2.patch
 	patches.kabi/pagecache-limit-reduce-zone-lrulock-bouncing-kabi.patch
 	patches.suse/pagecachelimit_batch_huge_nr_to_scan.patch
+	patches.suse/pagecache-limit-do-not-skip-smaller-zones.patch
 	patches.suse/pagecache-limit-vmstat_counters.patch
 	patches.suse/pagecache-limit-fix-wrong-reclaimed-count.patch
 	patches.suse/pagecache-limit-tracepoints.patch
