isci: fix breakage caused by >16byte CDB patch (bug#923943).

--- a/series.conf
+++ b/series.conf
@@ -7942,6 +7942,9 @@
 	patches.suse/aoe-update-internal-version-number-to-81
 	patches.suse/aoe-fix-use-after-free-in-aoedev_by_aoeaddr
 
+	# bsc#923943
+	patches.drivers/isci-fix-breakage-caused-by-16byte-cdb-patch
+
 	########################################################
 	# DRM/Video, AGP, graphics related stuff
 	########################################################
