mm, slab: lock the correct nodelist after reenabling irqs (bnc#926439).

--- a/series.conf
+++ b/series.conf
@@ -5110,6 +5110,7 @@
 	########################################################
 	patches.suse/mm-Serialize-access-to-min_free_kbytes.patch
 	patches.suse/mm-sl[au]b-add-knowledge-of-PFMEMALLOC-reserve-pages.patch
+	patches.fixes/mm-slab-lock-the-correct-nodelist-after-reenabling-i.patch
 	patches.suse/mm-introduce-__GFP_MEMALLOC-to-allow-access-to-emergency-reserves.patch
 	patches.suse/mm-allow-PF_MEMALLOC-from-softirq-context.patch
 	patches.suse/mm-only-set-page--pfmemalloc-when-ALLOC_NO_WATERMARKS-was-used.patch
