--- a/series.conf
+++ b/series.conf
@@ -7501,6 +7501,7 @@
 
 	# SCSI update for SP4
 	patches.fixes/scsi-enclosure-fix-WARN_ON-in-dual-path-device-remov.patch
+	patches.fixes/scsi-enclosure-handle-non-unique-element-descriptors.patch
 
 	# NVMe backport (FATE#313627)
 	patches.drivers/nvme-0001-New-driver.patch
