enclosure: fix WARN_ON in dual path device removing (bsc#925417).

--- a/series.conf
+++ b/series.conf
@@ -7500,6 +7500,7 @@
 	patches.fixes/sg-fix-blk_get_queue-usage
 
 	# SCSI update for SP4
+	patches.fixes/scsi-enclosure-fix-WARN_ON-in-dual-path-device-remov.patch
 
 	# NVMe backport (FATE#313627)
 	patches.drivers/nvme-0001-New-driver.patch
