i2c: i801: Add DeviceIDs for SunrisePoint LP (bnc#925554).

--- a/series.conf
+++ b/series.conf
@@ -18811,6 +18811,9 @@
 	# Include support for Intel Sunrise Point (PCH) SATA, HD Audio, TCO Watchdog and I2C(SMBUS) fate#317355
 	patches.drivers/0003-i2c-i801-Add-Device-IDs-for-Intel-Sunrise-Point-PCH.patch
 
+	# Sunrise Point LP chipset support, bnc#925554
+	patches.drivers/0001-i2c-i801-Add-DeviceIDs-for-SunrisePoint-LP.patch
+
 	##########################################################
 	# Sound
 	##########################################################
