ACPI / osl: speedup grace period in acpi_os_map_cleanup (bnc#877456).

--- a/series.conf
+++ b/series.conf
@@ -22472,6 +22472,9 @@
 	patches.arch/mce-acpi-apei-add-a-boot-option-to-disable-ff-mode-for-corrected-errors.patch
 	patches.arch/mce-acpi-apei-soft-offline-a-page-on-firmware-ghes-notification.patch
 
+	# bnc#877456 long delays when booting under VMware Workstation
+	patches.fixes/0001-ACPI-osl-speedup-grace-period-in-acpi_os_map_cleanup.patch
+
 	# FATE#317449
 	patches.drivers/0001-x86-efi-Add-EFI-framebuffer-earlyprintk-support.patch 
 	patches.drivers/0002-x86-efi-Fix-earlyprintk-off-by-one-bug.patch 
