--- a/series.conf
+++ b/series.conf
@@ -17020,6 +17020,7 @@
 	patches.drivers/mlx4-0294-mlx4-fix-race-accessing-page-_count.patch
 	patches.drivers/mlx4-0295-net-mlx4_core-Call-synchronize_irq-before-freeing-EQ.patch
 	patches.drivers/mlx4-0296-net-mlx4_core-Limit-count-field-to-24-bits-in-qp_all.patch
+	patches.drivers/net-mlx4_en-Doorbell-is-byteswapped-in-Little-Endian.patch
 
 	# bnx2x SP4 update (bsc#908684 FATE#317539)
 	patches.drivers/bnx2x-0001-bnx2x-remove-__dev-attributes.patch
